fix: numerical blog username

--- a/tex/references.bib
+++ b/tex/references.bib
@@ -1,22 +1,32 @@
+@misc{jk_182_2024,
+  title   = {Evaluating Sharpness using LC0's WDL},
+  url     = {https://lichess.org/@/jk_182/blog/evaluating-sharpness-using-lc0s-wdl/EXZ3pRoy},
+  journal = {Lichess Blog},
+  author  = {jk\_$182$},
+  year    = {2024},
+  month   = {Apr}
+} 
+
 @article{article,
-  author = {Guid, Matej and Bratko, Ivan},
-  year = {2006},
-  month = {06},
-  pages = {65-73},
-  title = {Computer Analysis of World Chess Champions.},
-  volume = {29},
+  author  = {Guid, Matej and Bratko, Ivan},
+  year    = {2006},
+  month   = {06},
+  pages   = {65-73},
+  title   = {Computer Analysis of World Chess Champions.},
+  volume  = {29},
   journal = {ICGA Journal}
 }
 
-@inproceedings{McIlroy_Young_2020, series={KDD '20},
-  title={Aligning Superhuman AI with Human Behavior: Chess as a Model System},
-  url={http://dx.doi.org/10.1145/3394486.3403219},
-  DOI={10.1145/3394486.3403219},
-  booktitle={Proceedings of the 26th ACM SIGKDD International Conference on Knowledge Discovery \&; Data Mining},
-  publisher={ACM},
-  author={McIlroy Young, Reid and Sen, Siddhartha and Kleinberg, Jon and Anderson, Ashton},
-  year={2020},
-  month={09}, 
-  pages={1677-1687},
-  collection={KDD '20} 
+@inproceedings{McIlroy_Young_2020,
+  series     = {KDD '20},
+  title      = {Aligning Superhuman AI with Human Behavior: Chess as a Model System},
+  url        = {http://dx.doi.org/10.1145/3394486.3403219},
+  doi        = {10.1145/3394486.3403219},
+  booktitle  = {Proceedings of the 26th ACM SIGKDD International Conference on Knowledge Discovery \&; Data Mining},
+  publisher  = {ACM},
+  author     = {McIlroy Young, Reid and Sen, Siddhartha and Kleinberg, Jon and Anderson, Ashton},
+  year       = {2020},
+  month      = {09},
+  pages      = {1677-1687},
+  collection = {KDD '20}
 }
