feat: complete outline

--- a/tex/references.bib
+++ b/tex/references.bib
@@ -1,10 +1,28 @@
 @misc{jk_182_2024,
   title   = {Evaluating Sharpness using LC0's WDL},
-  url     = {https://lichess.org/@/jk_182/blog/evaluating-sharpness-using-lc0s-wdl/EXZ3pRoy},
+  note     = {\url{https://lichess.org/@/jk_182/blog/evaluating-sharpness-using-lc0s-wdl/EXZ3pRoy}},
   journal = {Lichess Blog},
   author  = {jk\_$182$},
   year    = {2024},
   month   = {Apr}
+} 
+
+@misc{jk_182_2025,
+  title   = {How does the Clock impact the Rate of Mistakes?},
+  note     = {\url{https://lichess.org/@/jk_182/blog/how-does-the-clock-impact-the-rate-of-mistakes/JSazQplM}},
+  journal = {Lichess Blog},
+  author  = {jk\_$182$},
+  year    = {2025},
+  month   = {Oct}
+} 
+
+@misc{jk_182_2024b,
+  title   = {Using LC0's WDL to Analyze Games},
+  note     = {\url{https://lichess.org/@/jk_182/blog/using-lc0s-wdl-to-analyze-games/spKmwjw5}},
+  journal = {Lichess Blog},
+  author  = {jk\_$182$},
+  year    = {2024},
+  month   = {March}
 } 
 
 @article{article,
@@ -29,4 +47,12 @@
   month      = {09},
   pages      = {1677-1687},
   collection = {KDD '20}
+}
+
+@unpublished{vandy_final_paper_2025,
+  author    = {Vandit Goel},
+  title     = {Predicting Level of Game Play (Chess) Using Transformers},
+  year      = {2025},
+  note      = {Unpublished manuscript. Available as local file: \url{Supplement1.pdf}},
+  file      = {:../data/reports/Supplement1.pdf:PDF}
 }
