--- a/tex/research_paper.tex
+++ b/tex/research_paper.tex
@@ -36,6 +36,7 @@
 
 \documentclass{amsart}
 \usepackage{enumitem} % added to allow custom enumerate labels
+\usepackage{color} % kept minimal; xcolor not needed for the table
 %% \usepackage{microtype} % improves justification and typography
 \usepackage[margin=1in]{geometry} % modest margins for better output layout
 \usepackage[colorlinks=true,linkcolor=blue,urlcolor=blue]{hyperref} % clickable links and PDF metadata
@@ -104,8 +105,9 @@ A "blunder" will be defined as a move that causes a substantial negative shift i
 
 The ultimate goal is to move beyond simple blunder identification and develop a model that captures the interplay between these variables. The final phase of the project will involve an attempt to create a predictive neural network model that estimates the probability of a blunder occurring in a given position and context.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Topic Fit}
+% \section{Topic Fit}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 The project integrates several core mathematical topics from the course:
 
 \begin{itemize}
@@ -116,10 +118,51 @@ The project integrates several core mathematical topics from the course:
     \item \textbf{Machine Learning:} Applying regression and neural models as practical extensions of linear methods.
 \end{itemize}
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% \section{Minimum Success Criteria}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+A minimum successful outcome for this project would be the completion of a thorough descriptive analysis. This includes:
+
+\begin{enumerate}
+    \item Successfully downloading, parsing, and processing a substantial subset of the Lichess database (e.g., 1 million games).
+    \item Analyzing these games with Stockfish to generate evaluation data for each move.
+    \item Producing a detailed statistical report with visualizations that clearly shows the relationships between blunder frequency and the key factors (time pressure, player rating, game phase, etc.).
+    \item A well-written final paper detailing the process and findings, even without a predictive model.
+\end{enumerate}
+
+% \section{Stretch Goals}
+If the minimum outcome is achieved with time to spare, the project will proceed to:
+\begin{itemize}
+    \item Extend the analysis to include neural network-based blunder prediction.
+    \item Explore position-type clustering and visualization using dimensionality reduction.
+    \item Compare models across player Elo ranges to study performance variance.
+\end{itemize}
+
+% \section{Risk Mitigation}
+
+The following table outlines potential risks and mitigation strategies:
+\begin{table}[htbp]
+\centering
+% increase row height and set visible border thickness
+\renewcommand{\arraystretch}{1.15}
+\setlength{\arrayrulewidth}{0.5pt}
+\begin{tabular}{|p{0.20\linewidth}|p{0.45\linewidth}|p{0.10\linewidth}|p{0.25\linewidth}|}
+\hline
+\textbf{Risk} & \textbf{Description} & \textbf{Impact} & \textbf{Mitigation Strategy} \\
+\hline
+Data Acquisition/Processing & The Lichess database is massive. Downloading and processing it could be slow and computationally expensive. PGN parsing can be complex. & High & Scope modification: start with a smaller subset (e.g., rapid games or a rating bracket). Use established libraries for PGN parsing. \\
+\hline
+Engine Analysis Time & Analyzing millions of moves with Stockfish can take days or weeks. & High & Reduce number of games, analyze only critical positions, or lower analysis depth. \\
+\hline
+Complexity of Predictive Model & Training a neural network can be time-consuming and complex. & Medium & Pivot to simpler models (logistic regression, XGBoost) if needed and focus on feature engineering. \\
+\hline
+Lack of Clear Correlation & Data may not show strong correlations between variables and blunder frequency. & Low & Treat the null result as informative; explore other factors or focus on interpretation. \\
+\hline
+\end{tabular}
+\end{table}
 
 % bibliography (BibTeX)
 {
-    \small
     \bibliographystyle{plain}
     \bibliography{references}
     \nocite{*}
