feat: add more refrences

--- a/tex/references.bib
+++ b/tex/references.bib
@@ -25,6 +25,50 @@
   month   = {March}
 } 
 
+@misc{stockfishFAQ,
+  title   = {Stockfish FAQ},
+  note     = {\url{https://official-stockfish.github.io/docs/stockfish-wiki/Stockfish-FAQ.html#centipawns}},
+  journal = {GitHub Wiki},
+  author  = {Stockfish},
+  year    = {2024},
+  month   = {March}
+} 
+
+@misc{stockfishWDL,
+  title   = {Stockfish WDL Model},
+  note     = {\url{https://github.com/official-stockfish/WDL_model?tab=readme-ov-file#background}},
+  journal = {GitHub Wiki},
+  author  = {Stockfish},
+  year    = {2024},
+  month   = {March}
+} 
+
+@misc{lichessPR11148,
+  title   = {Lichess PR 11148},
+  note     = {\url{https://github.com/lichess-org/lila/pull/11148}},
+  journal = {GitHub PR},
+  author  = {Lichess},
+  year    = {2024},
+  month   = {March}
+} 
+
+@misc{lichessJudgement1,
+  title   = {Lichess Judgement},
+  note     = {\url{https://lichess.org/page/accuracy#first-compute-win}},
+  journal = {GitHub PR},
+  author  = {Lichess},
+  year    = {2024},
+  month   = {March}
+} 
+@misc{lichessJudgement2,
+  title   = {Lichess Judgement},
+  note     = {\url{https://github.com/lichess-org/lila/blob/9dec42fe22264b6c57a747e441ef33e50f6ed395/modules/tree/src/main/Advice.scala#L58}},
+  journal = {GitHub PR},
+  author  = {Lichess},
+  year    = {2024},
+  month   = {March}
+} 
+
 @article{article,
   author  = {Guid, Matej and Bratko, Ivan},
   year    = {2006},
